* detect maximum possible segment size on file system (e.g. FAT)

smraw.net
* implement other functions ?
* in examples print exception/backtrace on error

Test
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add glob test to msvscpp project

Beta release
* remove deprecated functions in libsmraw_legacy.[ch]

20110110
* updated libcstring, libuna, libbfio, libfvalue
* correction for identifier size
* correction for access flags
* added read and write random functions

20110108
* updated configure.ac
* updated common, libcstring, libuna, libbfio

20110106
* worked on UTF-16 functions
* tests: code clean up

20110104
* updated libuna, libbfio, libmfdata, libfvalue
* 2011 update

20101221
* fixed error in wide character open introduced by code clean up

20101219
* updated libcstring, libbfio, libfvalue, libmfdata
* code clean up

20101218
* updated test scripts

20101216
* updated configure, added gettext support
* updated libbfio, libfvalue

20101208
* bug fix in write segment filename extension

20101207
* updated configure.ac, common, libcstring, liberror, libnotify, libuna,
  libbfio, libfvalue
* code clean up
* fix for mingw compilation in configure.ac

20101113
* textual corrections

20101111
* updated libfvalue, libbfio

20101103
* worked on smraw.net
* added const to write
* updated configure.ac
* updated include/error.h, include/types.h
* updated liberror, libbfio, libmfdata

20101102
* added smraw.net files

20101025
* updated libfvalue

20101015
* added write test
* write no longer requires media size to be set
* media size now limits the write
* updated codegear files

20101014
* updated libmfdata, common, liberror, libbfio, libfvalue

20100928
* updated liberror, libnotify, libbfio, libfvalue
* code clean
* added access flags API functions
* worked on TODOs

20100805
* textual changes
* updated libcstring, libbfio, libfvalue
* updated msvscpp and codegear files

20100727