@@ -244,7 +244,7 @@ int libsmraw_handle_open(
      libsmraw_handle_t *handle,
      char * const filenames[],
      int number_of_filenames,
-     uint8_t access_flags,
+     int access_flags,
      libsmraw_error_t **error );
 
 #if defined( LIBSMRAW_HAVE_WIDE_CHARACTER_TYPE )
@@ -256,7 +256,7 @@ int libsmraw_handle_open_wide(
      libsmraw_handle_t *handle,
      wchar_t * const filenames[],
      int number_of_filenames,
-     uint8_t access_flags,
+     int access_flags,
      libsmraw_error_t **error );
 #endif
 
@@ -268,7 +268,7 @@ LIBSMRAW_EXTERN \
 int libsmraw_handle_open_file_io_pool(
      libsmraw_handle_t *handle,
      libbfio_pool_t *file_io_pool,
-     uint8_t access_flags,
+     int access_flags,
      libsmraw_error_t **error );
 #endif
 
