@@ -27,6 +27,9 @@ Test
 Beta release
 * remove deprecated functions in libsmraw_legacy.[ch]
 
+20110111
+* updated smraw.net
+
 20110110
 * updated libcstring, libuna, libbfio, libfvalue
 * correction for identifier size
